<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:layout_marginTop="@dimen/margin11"
            android:padding="@dimen/pad7">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    android:id="@+id/btnPlay"
                    android:background="@drawable/button_bg"
                    android:textColor="@android:color/white"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginEnd="@dimen/margin3"
                    android:layout_marginRight="@dimen/margin3"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    android:id="@+id/btnStop"
                    android:background="@drawable/button_bg"
                    android:textColor="@android:color/white"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginStart="@dimen/margin3"
                    android:layout_marginLeft="@dimen/margin3"/>
            </LinearLayout>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin16"
                android:paddingBottom="@dimen/margin16"
                android:id="@+id/skBar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/txtViewTime"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:textSize="@dimen/txt18"
            android:text="@string/nameOfThisSong"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:text="@string/songName"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin5"
            android:ems="10"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:id="@+id/editText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:textSize="@dimen/txt18"
            android:text="@string/nameOfTheSinger"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:text="@string/artist"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin5"
            android:ems="10"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:id="@+id/editText2" />

    </LinearLayout>

</ScrollView>